--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,10 +10,16 @@ compatibility_date = "2024-01-17"
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/kv
-# [[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+[[kv_namespaces]]
+binding = "DB"
+id = "26199d825f9343608c926123ecf65e9b"
+preview_id = "b77d9ca3a2cc4541a1a7cb35b85e74e1"
 
+[[kv_namespaces]]
+binding = "SHARE_DB"
+id = "5c3491cf6e4d4f4e95baaecda7ca0602"
+preview_id = "315072bb1bc5496d828a29b254b72969"
+ 
 # Bind an R2 Bucket. Use R2 to store arbitrarily large blobs of data, such as files.
 # Docs: https://developers.cloudflare.com/r2/api/workers/workers-api-usage/
 # [[r2_buckets]]
